@startuml

title __RADAR's Class Diagram__\n

  namespace jovic.dragan.pj2.radar {
    class jovic.dragan.pj2.radar.ObjectInfo {
        - altitude : int
        - foreign : boolean
        - military : boolean
        - x : int
        - y : int
        + ObjectInfo()
        + getAltitude()
        + getDirection()
        + getX()
        + getY()
        + isForeign()
        + isMilitary()
        + setAltitude()
        + setDirection()
        + setForeign()
        + setMilitary()
        + setX()
        + setY()
        + toString()
    }
  }
  

  namespace jovic.dragan.pj2.radar {
    class jovic.dragan.pj2.radar.Radar {
        {static} + main()
    }
  }
  

  namespace jovic.dragan.pj2.radar {
    class jovic.dragan.pj2.radar.RadarExporter {
        - map : Map<Integer, Map<Integer, ConcurrentLinkedDeque<AerospaceObject>>>
        - preferenceWatcher : PreferenceWatcher<RadarPreferences>
        + RadarExporter()
        + run()
    }
  }
  

  jovic.dragan.pj2.radar.ObjectInfo .up.|> java.io.Serializable
  jovic.dragan.pj2.radar.ObjectInfo o-- jovic.dragan.pj2.util.Direction : direction
  jovic.dragan.pj2.radar.RadarExporter o-- jovic.dragan.pj2.preferences.RadarPreferences : radarPreferences


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
